<resources>
    <string name="app_name">ICAIEFA 2022</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_goal">Goals</string>
    <string name="menu_speakers">Speakers</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_restaurants">Restaurants in Goa</string>
    <string name="menu_about_conference">About ICAIEFA 2022</string>
    <string name="menu_sponsors">Sponsors</string>

    <string name="bulleted_list"><big>The conference will focus on (but is not limited to) the following key topics: </big> \n
        \n <li>AIE-based molecules in chemical sensing</li>
        \n <li>AIEgens in bioimaging, theranostic and biomedical applications</li>
        \n <li>Use of AIEgens as biosensor</li>
        \n <li>AIE mechanism its theoretical insights</li>
        \n <li>AIE-based polymers, oligomers, and their applications</li>
        \n <li>AIEgens in optoelectronics and energy applications</li>
        \n <li>Use of AIEgens in pharmaceuticals, agrochemicals and food chemistry</li>
        \n <li>Molecules with Aggregation induced enhanced emission (AIEE) properties and their applications</li>
        \n <li>The allied areas like small-molecule chemosensors/chemodosimeters, material-based fluorimetric sensors, supramolecular sensing, bioimaging etc. will also be within the scope of the conference.</li>
    </string>
    <string name="menu_sightseeing">Places to Visit in Goa</string>
    <string name="cab_services">Cab Services</string>
    <string name="menu_about_dev">About the Developers</string>
    <string name="about_uni">The Birla Institute of Technology &amp; Science, Pilani, a Deemed to be University with more than 17,000 students across its four campuses in Pilani, Goa, Hyderabad and Dubai, is a well–known Institute for higher education in engineering and sciences, and research. Ranked among the top few Indian universities it has been recognized as an Institute of Eminence by MHRD, Govt. of India. BITS, Pilani is India’s highest–ranked non–Government Institute as declared in QS Asia 2020 and QS India 2020. Globally it is within 501-550 in Chemistry. The qualities of research and innovation, enterprise, and transparency have characterized the Institute towards its ceaseless march to eminence. With Government funded as well as self-sponsored State of the art facilities to support R&amp;D activities, several hundreds of faculties and many enthusiastic research scholars are engaged in have been engaged in cutting-edge research leading to more than 11,700 Scopus indexed publications with over 1,25,000 citations and 85+ patents being filed till date. The physical location of the conference is KK Birla Goa Campus.</string>
    <string name="physical_location">BITS, Pilani- K. K. Birla Goa Campus is one of the four campuses of BITS, Pilani University and is located in the beach-land, Goa. The Goa Campus was commissioned in August 2004. Nesting in the lap of verdant hills, overlooking the Zuari River, the Campus is spread over an area of 180 acres. The location of the campus is unique in the respect of scenic beauty and panoramic view of picturesque surroundings encompassing the Zuari River, hillocks, waterways, forests, and landscape. Being fully residential, the university hosts 4.0 K students and 0.6 K faculty and staff in the campus.</string>
    <string name="about_the_dept">The department of chemistry of the Pilani campus was established way back in 1964 and Goa and Hyderabad were established in 2004 and 2008, respectively. The departments in all three campuses are well known nationally and internationally for their excellence in both academic and research activities. Departments are equipped with state-of-the-art instrumentation facilities and research laboratories. The departments are recipients of several grants from national agencies (such as DST, DBT, CSIR, DRDO, BRNS) and international agencies (e.g., The Royal Academy of Engineering). The faculty members across the departments are also engaged in various national and international collaborations. Department of Chemistry, Goa Campus with 20 highly motivated faculty members is actively involved in academic developments and research in conventional as well as emerging areas of chemistry and allied subjects.</string>
    <string name="about_the_venue">Birla Institute of Technology and Science, Pilani, K.K. Birla Goa Campus, Goa, with an auditorium of >2000 capacity, mini-auditoriums, several lecture halls, and good Wi-Fi connectivity, is well-equipped to host multiple scientific events at a time. The high-speed Cisco telepresence facility allows hosting webinar/online conferences with ease. The virtual mode will be hosted using this facility. The campus has a Guest House with all amenities for the accommodation of eminent Guest Speakers.</string>
    <string name="how_to_reach">There are direct flights from/to all metro cities like Mumbai, New Delhi, Bangalore, Chennai, Kolkata, Hyderabad with connectivity to all major cities in the country. For international travelers, there is a direct flight from/to Doha operated by Qatar Airways which connects every major city in the World. Getting to BITS Pilani, K.K. Birla Goa Campus from the airport takes only 5 minutes in a taxi which is easily available at the airport. For those commuting from the nearby railway stations Madgaon or Vasco-da- Gama to the venue, rented cars or buses are available.</string>
    <string name="about_the_place">Goa is a well–known and popular hotspot on the tourist map of India and the world. The name immediately brings to one\'s mind the lush green meadows, hills and valleys, the sea, and its attractive beaches. This charm and beauty set the right ambiance for BITS Pilani, K K Birla Goa Campus. Most of the tourist spots like popular beaches (Calangute, Baga, Colva, Palolem), Temples, Churches, and Hill-Stations are reachable within 1-2 hrs (or less) by cab or local bus. BITS Pilani, K K Birla Goa Campus, is about 10 km south of Vasco-da-Gama, 20 km north of Margaon, and 7 km east of Goa Airport, along National Highway - 17B, Bypass road.</string>
    <string name="sightseeing">In addition, places like Agonda, Palolem beach towards the extreme south and the beautiful Doodhsagar falls towards the north are among other most attractive tourist spots, which are within 2 h drive from the venue. The organizers will be more than happy to help the participants in case of any query related to sightseeing. Help Booth will be available from the organizers’ side for car rentals.</string>
    <string name="menu_program">Program</string>
</resources>