<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_goal"
            android:icon="@drawable/ic_menu_goals"
            android:title="@string/menu_goal" />
        <item
            android:id="@+id/nav_speakers"
            android:icon="@drawable/ic_menu_speakers"
            android:title="@string/menu_speakers" />
        <item
            android:id="@+id/nav_sponsors"
            android:icon="@drawable/ic_menu_sponsors"
            android:title="@string/menu_sponsors" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_menu_maps"
            android:title="@string/menu_maps" />
        <item
            android:id="@+id/nav_sightseeing"
            android:icon="@drawable/ic_menu_sightseeing"
            android:title="@string/menu_sightseeing" />
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_menu_restaurant"
            android:title="@string/menu_restaurants" />
        <item
            android:id="@+id/nav_about_conference"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about_conference" />
    </group>
</menu>